[package]
name = "maybenot-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.2"
maybenot = { path = "/home/pulls/Documents/maybenot/maybenot/" }
log = "0.4.20"
test-log = "0.2.12"
fastrand = "2.0.0"

[dev-dependencies]
env_logger = "*"
