[package]
name = "maybenot-simulator"
version = "1.0.1"
edition = "2021"
authors = ["Tobias Pulls"]
license = "MIT OR Apache-2.0"
homepage = "https://maybenot.io"
description = "A simulator for the Maybenot framework"
keywords = [ "anonymity", "correlation", "fingerprinting", "privacy", "security" ]
categories = [ "cryptography", "network-programming" ]
repository = "https://github.com/maybenot-io/maybenot-simulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.2"
maybenot = "1.0.0"
log = "0.4.20"
test-log = "0.2.12"
fastrand = "2.0.0"

[dev-dependencies]
env_logger = "*"
