[package]
name = "maybenot-simulator"
version = "2.0.0"
edition = "2021"
authors = ["Tobias Pulls"]
license = "MIT OR Apache-2.0"
homepage = "https://maybenot.io"
description = "A simulator for the Maybenot framework"
keywords = [ "anonymity", "correlation", "fingerprinting", "privacy", "security" ]
categories = [ "cryptography", "network-programming" ]
repository = "https://github.com/maybenot-io/maybenot-simulator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.4.0"
maybenot = { path = "../maybenot/" }
log = "0.4.21"
test-log = "0.2.15"
fastrand = "2.0.2"
serde = "1.0.198"
rand = "0.8.5"
serde_json = "1.0.116"
enum-map = "2.7.3"

[dev-dependencies]
env_logger = "0.10.2"
